[tool.poetry]
name = "cohere-wikipedia-preparation"
version = "0.1.0"
description = ""
authors = ["Jon Besga <jon.besga@neo4j.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.1.0"
h5py = "^3.12.1"
scikit-learn = "^1.5.2"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
